--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,4 +1,8 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>functional</td><td>Groups.testMethod1()[pri:0, instance:annotations.Groups@204f30ec]<br/>Groups.tetsMethod2()[pri:0, instance:annotations.Groups@343f4d3d]<br/>Groups.tetsMethod2()[pri:0, instance:annotations.Groups@204f30ec]<br/></td></tr>
-<tr><td>smoke</td><td>Groups.testMethod4()[pri:0, instance:annotations.Groups@343f4d3d]<br/>Groups.tetsMethod2()[pri:0, instance:annotations.Groups@343f4d3d]<br/>Groups.tetsMethod2()[pri:0, instance:annotations.Groups@204f30ec]<br/>Groups.testMethod3()[pri:0, instance:annotations.Groups@343f4d3d]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>F1</td><td>PartialGroups_6.testM1()[pri:0, instance:annotations.PartialGroups_6@2a70a3d8]<br/></td></tr>
+<tr><td>TestAll</td><td>PartialGroups_6.testM1()[pri:0, instance:annotations.PartialGroups_6@2a70a3d8]<br/></td></tr>
+<tr><td>funct</td><td>ExcludeGroups_5.testMethod4()[pri:0, instance:annotations.ExcludeGroups_5@1d371b2d]<br/></td></tr>
+<tr><td>functional</td><td>Groups_2.tetsMethod2()[pri:0, instance:annotations.Groups_2@6a1aab78]<br/>Groups_2.tetsMethod2()[pri:0, instance:annotations.Groups_2@37374a5e]<br/>Groups_2.testMethod1()[pri:0, instance:annotations.Groups_2@37374a5e]<br/></td></tr>
+<tr><td>sanity</td><td>GroupOfGroups_4.testMethod2()[pri:0, instance:annotations.GroupOfGroups_4@5891e32e]<br/>GroupOfGroups_4.testMethod3()[pri:0, instance:annotations.GroupOfGroups_4@5891e32e]<br/></td></tr>
+<tr><td>smoke</td><td>GroupOfGroups_4.testMethod2()[pri:0, instance:annotations.GroupOfGroups_4@5891e32e]<br/>Groups_2.tetsMethod2()[pri:0, instance:annotations.Groups_2@6a1aab78]<br/>Groups_2.tetsMethod2()[pri:0, instance:annotations.Groups_2@37374a5e]<br/>GroupOfGroups_4.testMethod1()[pri:0, instance:annotations.GroupOfGroups_4@5891e32e]<br/>Groups_2.testMethod4()[pri:0, instance:annotations.Groups_2@6a1aab78]<br/>Groups_2.testMethod3()[pri:0, instance:annotations.Groups_2@6a1aab78]<br/></td></tr>
 </table>
