--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,5 +1,15 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>annotations.Groups.testMethod1</td></tr>
-<tr><td>annotations.Groups.testMethod4</td></tr>
-<tr><td>annotations.Groups.testMethod3</td></tr>
+<tr><td>annotations.Groups_2.testMethod1</td></tr>
+<tr><td>annotations.Groups_2.testMethod4</td></tr>
+<tr><td>annotations.Groups_2.testMethod3</td></tr>
+<tr><td>annotations.MethodGroups_3.enableTestMethod1</td></tr>
+<tr><td>annotations.MethodGroups_3.enableTestMethod2</td></tr>
+<tr><td>annotations.MethodGroups_3.disabledTestMethod2</td></tr>
+<tr><td>annotations.MethodGroups_3.disabledTestMethod1</td></tr>
+<tr><td>annotations.GroupOfGroups_4.testMethod5</td></tr>
+<tr><td>annotations.GroupOfGroups_4.testMethod4</td></tr>
+<tr><td>annotations.ExcludeGroups_5.testMethod2</td></tr>
+<tr><td>annotations.ExcludeGroups_5.testMethod1</td></tr>
+<tr><td>annotations.ExcludeGroups_5.tetsMethod3</td></tr>
+<tr><td>annotations.PartialGroups_6.testM2</td></tr>
 </table>
