--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,32 +1,42 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c7c2a6">  <td>18/09/30 18:15:35</td>   <td>0</td> <td title="&gt;&gt;Sequence.beforeSuite()[pri:0, instance:annotations.Sequence@5b275dab]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1596000437</td>   <td></td> </tr>
-<tr bgcolor="c7c2a6">  <td>18/09/30 18:15:35</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Sequence.beforeTest()[pri:0, instance:annotations.Sequence@5b275dab]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1596000437</td>   <td></td> </tr>
-<tr bgcolor="c7c2a6">  <td>18/09/30 18:15:35</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Sequence.beforeClass()[pri:0, instance:annotations.Sequence@5b275dab]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1596000437</td>   <td></td> </tr>
-<tr bgcolor="c7c2a6">  <td>18/09/30 18:15:35</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Sequence.beforeMethod()[pri:0, instance:annotations.Sequence@5b275dab]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1596000437</td>   <td></td> </tr>
-<tr bgcolor="c7c2a6">  <td>18/09/30 18:15:35</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sequence.testM1()[pri:0, instance:annotations.Sequence@5b275dab]">testM1</td> 
-  <td>main@1596000437</td>   <td></td> </tr>
-<tr bgcolor="c7c2a6">  <td>18/09/30 18:15:35</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Sequence.afterMethod()[pri:0, instance:annotations.Sequence@5b275dab]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1596000437</td>   <td></td> </tr>
-<tr bgcolor="c7c2a6">  <td>18/09/30 18:15:35</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Sequence.afterClass()[pri:0, instance:annotations.Sequence@5b275dab]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1596000437</td>   <td></td> </tr>
-<tr bgcolor="c7c2a6">  <td>18/09/30 18:15:35</td>   <td>32</td> <td>&nbsp;</td><td title="&lt;&lt;Sequence.afterTest()[pri:0, instance:annotations.Sequence@5b275dab]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1596000437</td>   <td></td> </tr>
-<tr bgcolor="94d491">  <td>18/09/30 18:15:35</td>   <td>63</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Groups.testMethod3()[pri:0, instance:annotations.Groups@343f4d3d]">testMethod3</td> 
-  <td>main@1596000437</td>   <td></td> </tr>
-<tr bgcolor="94d491">  <td>18/09/30 18:15:35</td>   <td>79</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Groups.testMethod4()[pri:0, instance:annotations.Groups@343f4d3d]">testMethod4</td> 
-  <td>main@1596000437</td>   <td></td> </tr>
-<tr bgcolor="94d491">  <td>18/09/30 18:15:35</td>   <td>79</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Groups.tetsMethod2()[pri:0, instance:annotations.Groups@343f4d3d]">tetsMethod2</td> 
-  <td>main@1596000437</td>   <td></td> </tr>
-<tr bgcolor="94d491">  <td>18/09/30 18:15:35</td>   <td>94</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Groups.testMethod1()[pri:0, instance:annotations.Groups@204f30ec]">testMethod1</td> 
-  <td>main@1596000437</td>   <td></td> </tr>
-<tr bgcolor="94d491">  <td>18/09/30 18:15:35</td>   <td>94</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Groups.tetsMethod2()[pri:0, instance:annotations.Groups@204f30ec]">tetsMethod2</td> 
-  <td>main@1596000437</td>   <td></td> </tr>
-<tr bgcolor="c7c2a6">  <td>18/09/30 18:15:35</td>   <td>110</td> <td title="&lt;&lt;Sequence.afterSuite()[pri:0, instance:annotations.Sequence@5b275dab]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1596000437</td>   <td></td> </tr>
+<tr bgcolor="aac163">  <td>18/10/05 16:06:12</td>   <td>0</td> <td title="&gt;&gt;Sequence_1.beforeSuite()[pri:0, instance:annotations.Sequence_1@6043cd28]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1739876329</td>   <td></td> </tr>
+<tr bgcolor="aac163">  <td>18/10/05 16:06:12</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Sequence_1.beforeTest()[pri:0, instance:annotations.Sequence_1@6043cd28]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1739876329</td>   <td></td> </tr>
+<tr bgcolor="aac163">  <td>18/10/05 16:06:12</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Sequence_1.beforeClass()[pri:0, instance:annotations.Sequence_1@6043cd28]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1739876329</td>   <td></td> </tr>
+<tr bgcolor="aac163">  <td>18/10/05 16:06:12</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Sequence_1.beforeMethod()[pri:0, instance:annotations.Sequence_1@6043cd28]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1739876329</td>   <td></td> </tr>
+<tr bgcolor="aac163">  <td>18/10/05 16:06:12</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sequence_1.testM1()[pri:0, instance:annotations.Sequence_1@6043cd28]">testM1</td> 
+  <td>main@1739876329</td>   <td></td> </tr>
+<tr bgcolor="aac163">  <td>18/10/05 16:06:12</td>   <td>31</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Sequence_1.afterMethod()[pri:0, instance:annotations.Sequence_1@6043cd28]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1739876329</td>   <td></td> </tr>
+<tr bgcolor="aac163">  <td>18/10/05 16:06:12</td>   <td>31</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Sequence_1.afterClass()[pri:0, instance:annotations.Sequence_1@6043cd28]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1739876329</td>   <td></td> </tr>
+<tr bgcolor="aac163">  <td>18/10/05 16:06:12</td>   <td>31</td> <td>&nbsp;</td><td title="&lt;&lt;Sequence_1.afterTest()[pri:0, instance:annotations.Sequence_1@6043cd28]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1739876329</td>   <td></td> </tr>
+<tr bgcolor="ad7f7f">  <td>18/10/05 16:06:12</td>   <td>78</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Groups_2.testMethod3()[pri:0, instance:annotations.Groups_2@6a1aab78]">testMethod3</td> 
+  <td>main@1739876329</td>   <td></td> </tr>
+<tr bgcolor="ad7f7f">  <td>18/10/05 16:06:12</td>   <td>78</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Groups_2.testMethod4()[pri:0, instance:annotations.Groups_2@6a1aab78]">testMethod4</td> 
+  <td>main@1739876329</td>   <td></td> </tr>
+<tr bgcolor="ad7f7f">  <td>18/10/05 16:06:12</td>   <td>78</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Groups_2.tetsMethod2()[pri:0, instance:annotations.Groups_2@6a1aab78]">tetsMethod2</td> 
+  <td>main@1739876329</td>   <td></td> </tr>
+<tr bgcolor="ad7f7f">  <td>18/10/05 16:06:12</td>   <td>94</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Groups_2.testMethod1()[pri:0, instance:annotations.Groups_2@37374a5e]">testMethod1</td> 
+  <td>main@1739876329</td>   <td></td> </tr>
+<tr bgcolor="ad7f7f">  <td>18/10/05 16:06:12</td>   <td>94</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Groups_2.tetsMethod2()[pri:0, instance:annotations.Groups_2@37374a5e]">tetsMethod2</td> 
+  <td>main@1739876329</td>   <td></td> </tr>
+<tr bgcolor="90d1e6">  <td>18/10/05 16:06:12</td>   <td>125</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupOfGroups_4.testMethod1()[pri:0, instance:annotations.GroupOfGroups_4@5891e32e]">testMethod1</td> 
+  <td>main@1739876329</td>   <td></td> </tr>
+<tr bgcolor="90d1e6">  <td>18/10/05 16:06:12</td>   <td>125</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupOfGroups_4.testMethod2()[pri:0, instance:annotations.GroupOfGroups_4@5891e32e]">testMethod2</td> 
+  <td>main@1739876329</td>   <td></td> </tr>
+<tr bgcolor="90d1e6">  <td>18/10/05 16:06:12</td>   <td>125</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupOfGroups_4.testMethod3()[pri:0, instance:annotations.GroupOfGroups_4@5891e32e]">testMethod3</td> 
+  <td>main@1739876329</td>   <td></td> </tr>
+<tr bgcolor="718267">  <td>18/10/05 16:06:12</td>   <td>141</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExcludeGroups_5.testMethod4()[pri:0, instance:annotations.ExcludeGroups_5@1d371b2d]">testMethod4</td> 
+  <td>main@1739876329</td>   <td></td> </tr>
+<tr bgcolor="c2b765">  <td>18/10/05 16:06:12</td>   <td>156</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PartialGroups_6.testM1()[pri:0, instance:annotations.PartialGroups_6@2a70a3d8]">testM1</td> 
+  <td>main@1739876329</td>   <td></td> </tr>
+<tr bgcolor="aac163">  <td>18/10/05 16:06:12</td>   <td>156</td> <td title="&lt;&lt;Sequence_1.afterSuite()[pri:0, instance:annotations.Sequence_1@6043cd28]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1739876329</td>   <td></td> </tr>
 </table>
