--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -123,31 +123,27 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
-<td>annotations.ExcludeGroups_5</td>
+<td>annotations.MethodGroups_3</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>tetsMethod3</td>
-<td>broken </td>
-</tr>
+<td>disabledTestMethod1</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>testMethod2</td>
-<td>broken </td>
-</tr>
+<td>disabledTestMethod2</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>testMethod1</td>
-<td>broken funct </td>
-</tr>
+<td>enableTestMethod1</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>testMethod4</td>
-<td>funct </td>
-</tr>
+<td>enableTestMethod2</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -161,20 +157,30 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
-<td>annotations.PartialGroups_6</td>
+<td>annotations.ExcludeGroups_5</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testM2</td>
-<td>TestAll F2 </td>
+<td>testMethod2</td>
+<td>broken </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testM1</td>
-<td>TestAll F1 </td>
+<td>tetsMethod3</td>
+<td>broken </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testMethod1</td>
+<td>broken funct </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testMethod4</td>
+<td>funct </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
