--- a/test-output/old/Suite/toc.html
+++ b/test-output/old/Suite/toc.html
@@ -8,22 +8,54 @@
 <h3><p align="center">Results for<br/><em>Suite</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>3 tests</td>
-<td><a target='mainFrame' href='classes.html'>2 classes</a></td>
-<td>6 methods:<br/>
+<td>7 tests</td>
+<td><a target='mainFrame' href='classes.html'>5 classes</a></td>
+<td>11 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
-&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (3)</a></td>
+&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (13)</a></td>
 </tr>
 <tr>
-<td><a target='mainFrame' href='groups.html'>2 groups</a></td>
+<td><a target='mainFrame' href='groups.html'>6 groups</a></td>
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Group Methods (0/0/0)</td><td valign='top' align='right'>
+  <a href='Group Methods.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Excluding Test (1/0/0)</td><td valign='top' align='right'>
+  <a href='Excluding Test.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
 <table width='100%' class='test-passed'>
 <tr><td>
 <table style='width: 100%'><tr><td valign='top'>Functional (2/0/0)</td><td valign='top' align='right'>
   <a href='Functional.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Group of Groups (3/0/0)</td><td valign='top' align='right'>
+  <a href='Group of Groups.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Partial Groups (1/0/0)</td><td valign='top' align='right'>
+  <a href='Partial Groups.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
